--- a/pruebas/package.json
+++ b/pruebas/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "interfaces-server",
+  "name": "sistema-laboratorio",
   "version": "1.0.0",
-  "description": "Servidor web para las interfaces del laboratorio",
-  "main": "server.js",
+  "description": "Sistema de Laboratorio con React",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "axios": "^1.6.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.4"
   }
-} 
+}
