--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supercharge/request-ip": "^1.2.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
