--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@jsreport/jsreport-chrome-pdf": "^4.1.1",
+    "@jsreport/jsreport-fs-store": "^4.1.0",
+    "@jsreport/jsreport-handlebars": "^4.0.1",
+    "@jsreport/jsreport-jsrender": "^4.0.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
@@ -23,8 +27,9 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "jsreport": "^4.1.0",
     "mongoose": "^8.10.0",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
