--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:auditoria": "jest src/app/auditoria/tests",
-    "create-admin": "node src/scripts/createAdminUser.js"
+    "create-admin": "node src/scripts/createAdminUser.js",
+    "postinstall": "puppeteer browsers install chrome"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "jsreport": "^4.8.0",
     "mongoose": "^8.10.0",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "puppeteer": "^24.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
