--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:auditoria": "jest src/app/auditoria/tests",
-    "create-admin": "node src/scripts/createAdminUser.js",
-    "postinstall": "puppeteer browsers install chrome"
+    "create-admin": "node src/scripts/createAdminUser.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@jsreport/jsreport-chrome-pdf": "^4.1.1",
-    "@jsreport/jsreport-handlebars": "^4.0.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
@@ -26,10 +23,9 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "jsreport": "^4.8.0",
     "mongoose": "^8.10.0",
     "pdfkit": "^0.17.1",
-    "puppeteer": "^24.8.1"
+    "pdfmake": "^0.2.19"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
