--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.17.1",
+    "pdfmake": "^0.2.19"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
