--- a/Mongo_Usuarios/package.json
+++ b/Mongo_Usuarios/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:login": "jest login.test.js",
     "start": "node app.js"
   },
   "keywords": [],
@@ -24,9 +25,14 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.1",
+    "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1"
   }
 }
