--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
+    "mongoose-paginate-v2": "^1.9.1",
     "pdfkit": "^0.17.1",
     "pdfmake": "^0.2.19"
   },
