--- a/Mongo_Usuarios/package.json
+++ b/Mongo_Usuarios/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
