--- a/Mongo_Usuarios/package.json
+++ b/Mongo_Usuarios/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "qrcode": "^1.5.4",
     "resend": "^4.6.0"
   },
   "devDependencies": {
