--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^12.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "mongoose-paginate-v2": "^1.9.1",
+    "node-cron": "^3.0.3",
     "pdfkit": "^0.17.1",
-    "pdfmake": "^0.2.19"
+    "pdfmake": "^0.2.19",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
