--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:auditoria": "jest src/app/auditoria/tests",
-    "create-admin": "node src/scripts/createAdminUser.js"
+    "create-admin": "node src/scripts/createAdminUser.js",
+    "validate-production": "node validar-produccion.js",
+    "start:production": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
